--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
             <a href=""><i class="fa-solid fa-maximize"></i></a>
         </div>
     </header>
-    <main></main>
+    <!-- fine header -->
+    <!-- inizio main -->
+    <main>
+        <div class="container">
+            <div class="box"></div>
+            
+            
+        </div>
+    </main>
     <footer></footer>
 </body>
 
